# statement_extractor

./: .gitignore  README.md  pyproject.toml  requirements.txt  runner.py  verify.py
output/: DEC-JAN_output.json  SHY_BOB_output.json  bandhan_output.json  hdfc_output.json  icici_output.json  kotak5_output.json  panjab_output.json
statement_extractor/: __init__.py  __main__.py  cli.py  config.py  demo.py  extractor.py
statement_extractor/clustering/: __init__.py  column_detector.py
statement_extractor/continuity/: __init__.py  page_stitcher.py
statement_extractor/financial/: __init__.py  semantic_resolver.py  taxonomy.py
statement_extractor/grouping/: __init__.py  row_grouper.py  table_segmenter.py
statement_extractor/layout/: __init__.py  bank_fingerprinter.py  region_classifier.py
statement_extractor/ocr/: __init__.py  engine.py  finance_utils.py
statement_extractor/parsing/: __init__.py  header_inference.py  native_extractor.py  numeric_parser.py  transaction_reconstructor.py
statement_extractor/pdf/: __init__.py  pdf_ingestor.py
statement_extractor/schemas/: __init__.py  models.py
statement_extractor/utils/: __init__.py  debug_viz.py  exporters.py  line_detector.py  row_filters.py
statement_extractor/validation/: __init__.py  balance_validator.py  confidence_fuser.py  ledger_validator.py
tests/: test_extractor.py  test_finance_utils.py  test_ledger_validator.py  test_page_stitcher.py  test_region_classifier.py  test_semantic_resolver.py  test_taxonomy.py  test_transaction_reconstructor.py
