[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name            = "statement-extractor"
version         = "1.0.0"
description     = "Generalized enterprise-grade financial statement extraction engine"
readme          = "README.md"
requires-python = ">=3.11"
license         = { text = "MIT" }
keywords        = ["ocr", "finance", "bank-statement", "pdf-extraction", "paddleocr"]

dependencies = [
    "paddlepaddle>=2.6.2",
    "paddleocr>=2.9.1",
    "opencv-python-headless>=4.10.0",
    "Pillow>=10.0.0",
    "pymupdf>=1.24.0",
    "pdf2image>=1.17.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.5.0",
    "pydantic>=2.5.0",
    "rapidfuzz>=3.8.0",
]

[project.scripts]
statement-extractor = "statement_extractor.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["statement_extractor*"]

[tool.setuptools.package-data]
"statement_extractor" = ["py.typed"]
